style.css
:root {
    --navbar-height: 3rem;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    color: #333;
    list-style: none;
}

body {
    width: 100vw;
    height: 100vh;
    background-color: rgb(255, 184, 184);
    overflow: hidden;
}

navbar-component {
    width: 100%;
    position: fixed;
}

#main-view {
    width: 100%;
    height: calc(100% - var(--navbar-height));
    position: relative;
    top: var(--navbar-height);
    max-width: 70rem;
    margin: 0 auto;
    overflow-y: auto;
    overflow-x: hidden;
    padding: .1rem .25rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: white;
}

.hidden {
    display: none;
}

.clickable:hover {
cursor: pointer;
}

